# DesignPatterns

./: .gitignore
AbstractFactory/: CMakeLists.txt  main.cpp
AbstractFactory/body/: IronBody.hpp  MetalBody.hpp  ShipBody.hpp  WoodBody.hpp
AbstractFactory/engine/: DieselEngine.hpp  Engine.hpp  HumanEngine.hpp  NuclearEngine.hpp
AbstractFactory/factory/: AbstractFactory.hpp  BasicFactory.hpp  StandardFactory.hpp  UltimataFactory.hpp
AbstractFactory/ship/: Ship.hpp
AbstractFactory/weapon/: Cannon.hpp  GunWeapon.hpp  LaserWeapon.hpp  Weapon.hpp
AdapterPattern/: CMakeLists.txt  main.cpp
AdapterPattern/panda/: Panda.hpp
BridgePattern/: CMakeLists.txt  main.cpp
BuilderPattern/: CMakeLists.txt  main.cpp
ChainPattern/: CMakeLists.txt  main.cpp
CompositePattern/: CMakeLists.txt  main.cpp
DecoratorPattern/: CMakeLists.txt  main.cpp
FacadePattern/: CMakeLists.txt  main.cpp
FacadePattern/cannon/: Cannon.hpp  LionCannon.hpp  WindCannon.hpp
FacadePattern/system/: AimLockSystem.hpp  CokeSystem.hpp  EnergySystem.hpp
FactoryPattern/: CMakeLists.txt  main.cpp
FactoryPattern/factory/: AbstractFactory.hpp  BatFactory.hpp  LionFactory.hpp  SheepFactory.hpp
FactoryPattern/thing/: BatSmile.hpp  LionSmile.hpp  SheepSmile.hpp
FlyweightPattern/: CMakeLists.txt  main.cpp
PrototypePattern/: CMakeLists.txt  main.cpp
ProxyPattern/: CMakeLists.txt  main.cpp
SimpleFactory/: AbstractSmile.hpp  BatSmile.hpp  CMakeLists.txt  Factory.hpp  LionSmile.hpp  SheepSmile.hpp  main.cpp
SimpleModel/: CMakeLists.txt  hungey_mode.hpp  lazy_mode.hpp  main.cpp  task_queue.hpp
(+43 files in other folders)
